--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
      </tr>
      <hr>
      <div class="quadro">
-        <div>Foto</div>
+        <div>Fotos Fachada</div>
      </div>
     
 </body>
