--- a/Public/historia.html
+++ b/Public/historia.html
@@ -38,7 +38,7 @@
     <p>CEP 78.746-702</p>
      <tr>
         <td height="40"><a href="../index.html">Pagina Inicial</a></td>
-         <td><a href="">Descarte Adequado</a></td>
+         <td><a href="../Public/descarte.html">Descarte Adequado</a></td>
      </tr>
      <hr>
      <div class="quadro">
