--- a/Public/descarte.html
+++ b/Public/descarte.html
@@ -6,8 +6,8 @@
     <meta name="description"content="Raddec">
     <meta name="keywords" content="HTML, PHP, JavaScript, NodeJS, Laravel, CSS">
     <meta name="author" content="Ewerton Manchini">
-    <title>Raddec Industria</title>
-        <style>
+    <title>Raddec Industria - Descarte</title>
+    <style>
         body {
             padding-top: 20px;
             padding-left: 20px;
@@ -30,19 +30,19 @@
         </style>
 </head>
 <body>
-    <img src="imagens/logo.jpg" ALIGN="right">
+    <img src="../Imagens/Logo.jpg" ALIGN="right">
     <center><h1>Raddec industria e Comercio Ltda</h1></center>
     <br>
     <p>Avenida Pedro Caetano Rodrigues, nº 5443</p>
     <p>Distrito Industrial Augusto Bortoli Razia, Rondonópolis - MT</p>
     <p>CEP 78.746-702</p>
      <tr>
-         <td height="40"><a href="Public/historia.html">Historia</a></td>
-         <td><a href="Public/descarte.html">Descarte Adequado</a></td>
+        <td height="40"><a href="../index.html">Pagina Inicial</a></td>
+         <td><a href="../Public/historia.html">Historico</a></td>
      </tr>
      <hr>
      <div class="quadro">
-        <div>Fotos Fachada</div>
+        <div>1</div>
      </div>
     
 </body>
