--- a/Public/historia.html
+++ b/Public/historia.html
@@ -12,6 +12,7 @@
             padding-top: 20px;
             padding-left: 20px;
             padding-right: 20px;
+            background-color: rgb(226, 222, 216);
         }
             .quadro{
                 padding: 10px;
