--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             .titulo{
                 color: darkblue;
                 text-decoration: underline;
-                font: italic bold 30px Georgia, serif;
+                font: italic bold 20px Georgia, serif;
             }
         </style>
 </head>
@@ -37,11 +37,18 @@
     <p>Avenida Pedro Caetano Rodrigues, nº 5443</p>
     <p>Distrito Industrial Augusto Bortoli Razia, Rondonópolis - MT</p>
     <p>CEP 78.746-702</p>
-     <tr>
-         <td height="40"><a href="Public/historia.html">Historia</a></td>
-         <td><a href="Public/descarte.html">Descarte Adequado</a></td>
-     </tr>
+     <center><tr>
+         <td height="40"><a href="Public/historia.html">|História</a></td>
+         <td><a href="Public/gestao.html">|Gestão de Pessoas</a></td>
+         <td><a href="Public/qualidade.html">|Política de Qualidade</a></td>
+         <td><a href="Public/vendas.html">|Central de Vendas</a></td>
+         <td><a href="Public/fale.html">|Fale Conosco</a></td>
+     </tr></center>
      <hr>
+     <div class="titulo">Nossa Fábrica</div>
+     <div>Instalada em Rondonópolis-MT , no distrito industrial da cidade.</div> 
+     <div>Possui xx.000 m² construídos com capacidade de produção de x.000 a x.000 toneladas/mês.</div>
+     <br>
      <div class="quadro">
         <div>Fotos Fachada</div>
      </div>
