--- a/Public/historia.html
+++ b/Public/historia.html
@@ -9,19 +9,26 @@
     <title>Raddec Industria - História</title>
     <style>
         body {
+            background: url(../Imagens/FachadaT.png) no-repeat center center fixed ;
+            background-size: cover;
             padding-top: 20px;
             padding-left: 20px;
             padding-right: 20px;
-            background-color: rgb(226, 222, 216);
+            background-color: rgb(255, 255, 255);
         }
-        .objeto {
-                display: flex;
-                flex-direction: column;
-                flex-direction: row;
-                width: 800px;
-                height: 400px;
-                border: 1px solid black;
-            }
+        .container img {
+            max-width: 300px;
+            max-height:300px;
+            width: auto;
+            height: auto;
+        }
+        .container {
+            clear: both;
+            margin-top: 10px;
+        }
+        img {
+            vertical-align: top
+        }
         .titulo{
                 color: darkblue;
                 text-decoration: underline;
