--- a/Public/qualidade.html
+++ b/Public/qualidade.html
@@ -9,24 +9,32 @@
     <title>Raddec Industria - Política de Qualidade</title>
     <style>
         body {
+            background: url(../Imagens/FachadaT.png) no-repeat center center fixed ;
+            background-size: cover;
             padding-top: 20px;
             padding-left: 20px;
             padding-right: 20px;
-            background-color: rgb(226, 222, 216);
+            background-color: rgb(255, 255, 255);
         }
-        .objeto {
-                display: flex;
-                flex-direction: column;
-                flex-direction: row;
-                width: 800px;
-                height: 400px;
-                border: 1px solid black;
-            }
-            .titulo{
-                color: darkblue;
-                text-decoration: underline;
-                font: italic bold 20px Georgia, serif;
-            }
+
+        .titulo{
+            color: darkblue;
+            text-decoration: underline;
+            font: italic bold 20px Georgia, serif;
+        }
+        .container img {
+            max-width: 300px;
+            max-height:300px;
+            width: auto;
+            height: auto;
+        }
+        .container {
+            clear: both;
+            margin-top: 10px;
+        }
+        img {
+            vertical-align: top
+        }
         </style>
 </head>
 <body>
@@ -53,9 +61,10 @@
      <div>Aprimorar de maneira eficaz e continuamente nossos processos através de 
          treinamento de nossos colaboradores, atendendo a todos os requisitos normativos.</div>
          <br>
-     <div class="objeto">
-        <div>FOTO</div>
-     </div>
+     <div class="container"> 
+         <img src="../Imagens/qualidade.jpeg"> 
+         <img src="../Imagens/qualidade2.jpeg"> 
+    </div>
     
 </body>
 </html>
