correção logo pagina inicial

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 
-    <img src="imagens/logo.jpg" ALIGN="right">
+    <img src="/Imagens/Logo.jpg" ALIGN="right">
     <center><h1>Raddec industria e Comercio Ltda</h1></center>
     <br>
     <p>Avenida Pedro Caetano Rodrigues, nº 5443</p>
