iniciado informações ao cliente

--- a/Public/historia.html
+++ b/Public/historia.html
@@ -48,6 +48,7 @@
          <td><a href="../Public/gestao.html">|Gestão de Pessoas</a></td>
          <td><a href="../Public/qualidade.html">|Política de Qualidade</a></td>
          <td><a href="../Public/vendas.html">|Central de Vendas</a></td>
+         <td><a href="../Public/informacoes.html">|Informações ao Cliente</a></td>
          <td><a href="../Public/fale.html">|Fale Conosco</a></td>
      </tr></center>
      <hr>
