--- a/Public/informacoes.html
+++ b/Public/informacoes.html
@@ -6,7 +6,7 @@
     <meta name="description"content="Raddec">
     <meta name="keywords" content="HTML, PHP, JavaScript, NodeJS, Laravel, CSS">
     <meta name="author" content="Ewerton Manchini">
-    <title>Raddec Industria - Política de Qualidade</title>
+    <title>Raddec Industria - Informações ao Cliente</title>
     <style>
         body {
             background: url(../Imagens/FachadaT.png) no-repeat center center fixed ;
@@ -49,12 +49,11 @@
          <td><a href="../Public/historia.html">|Historico</a></td>
          <td><a href="../Public/gestao.html">|Gestão de Pessoas</a></td>
          <td><a href="../Public/vendas.html">|Central de Vendas</a></td>
-         <td><a href="../Public/informacoes.html">|Informações ao Cliente</a></td>
          <td><a href="../Public/fale.html">|Fale Conosco</a></td>
      </tr></center>
      <hr>
      <br>
-     <div class="titulo">Política de Qualidade</div>
+     <div class="titulo">Informações ao Cliente</div>
      <div>Atender aos requisitos de nossos clientes no fornecimento de 
          produtos confiáveis e de qualidade, que garantam além da satisfação, a proteção de vidas.</div>
      <div>Buscar a melhoria contínua por meio de um Sistema de Gestão da Qualidade efetivo, 
@@ -63,8 +62,7 @@
          treinamento de nossos colaboradores, atendendo a todos os requisitos normativos.</div>
          <br>
      <div class="container"> 
-         <img src="../Imagens/qualidade.jpeg"> 
-         <img src="../Imagens/qualidade2.jpeg"> 
+         <img src=""> 
     </div>
     
 </body>
