--- a/Public/fale.html
+++ b/Public/fale.html
@@ -49,6 +49,7 @@
          <td><a href="../Public/gestao.html">|Gestão de Pessoas</a></td>
          <td><a href="../Public/qualidade.html">|Política de Qualidade</a></td>
          <td><a href="../Public/vendas.html">|Central de Vendas</a></td>
+         <td><a href="../Public/informacoes.html">|Informações ao Cliente</a></td>
      </tr></center>
      <hr>
      <br>
