informacaoes ao cliente

--- a/Public/informacoes.html
+++ b/Public/informacoes.html
@@ -54,12 +54,13 @@
      <hr>
      <br>
      <div class="titulo">Informações ao Cliente</div>
-     <div>Atender aos requisitos de nossos clientes no fornecimento de 
-         produtos confiáveis e de qualidade, que garantam além da satisfação, a proteção de vidas.</div>
-     <div>Buscar a melhoria contínua por meio de um Sistema de Gestão da Qualidade efetivo, 
-         que englobe parceiros, força de trabalho, fornecedores de forma comprometida e capacitada.</div> 
-     <div>Aprimorar de maneira eficaz e continuamente nossos processos através de 
-         treinamento de nossos colaboradores, atendendo a todos os requisitos normativos.</div>
+     <div>Padrão produzido em aço carbono, galvanizado, de seção quadrada ou redonda, 
+         para ligações monofásicas, bifásicas ou trifásicas. Produto oferecido com 
+         fiação de entrada, saída e neutra, com caixa para abrigar medidor de energia, 
+         disjuntor. Produto pronto para instalação conforme Norma 
+         <td><a href="../Imagens/NDU001.pdf">NDU001</a></td> da Energisa.</div>
+     <div>A RADDEC recomenda o descarte de seus produtos através de programas de coleta seletiva e/ou 
+         reciclagem presentes em sua região.</div>
          <br>
      <div class="container"> 
          <img src=""> 
