informacoes ao cliente - procedimento de producao

--- a/Public/informacoes.html
+++ b/Public/informacoes.html
@@ -61,6 +61,7 @@
          <td><a href="../Imagens/NDU001.pdf">NDU001</a></td> da Energisa.</div>
      <div>A RADDEC recomenda o descarte de seus produtos através de programas de coleta seletiva e/ou 
          reciclagem presentes em sua região.</div>
+    <div><td><a href="../Imagens/PP010.pdf">Procedimento de Produção</a></td></div>
          <br>
      <div class="container"> 
          <img src=""> 
