--- a/Public/informacoes.html
+++ b/Public/informacoes.html
@@ -49,6 +49,8 @@
          <td><a href="../Public/historia.html">|Historico</a></td>
          <td><a href="../Public/gestao.html">|Gestão de Pessoas</a></td>
          <td><a href="../Public/vendas.html">|Central de Vendas</a></td>
+         <td><a href="../Public/meioambiente.html">|Meio Ambiente</a></td>
+         <td><a href="../Public/segurancatrabalho.html">|Saúde e Segurança do Trabalho</a></td>
          <td><a href="../Public/fale.html">|Fale Conosco</a></td>
      </tr></center>
      <hr>
@@ -59,9 +61,12 @@
          fiação de entrada, saída e neutra, com caixa para abrigar medidor de energia, 
          disjuntor. Produto pronto para instalação conforme Norma 
          <td><a href="../Imagens/NDU001.pdf">NDU001</a></td> da Energisa.</div>
-     <div>A RADDEC recomenda o descarte de seus produtos através de programas de coleta seletiva e/ou 
-         reciclagem presentes em sua região.</div>
-    <div><td><a href="../Imagens/PP010.pdf">Procedimento de Produção</a></td></div>
+     <div>A RADDEC recomenda o descarte de seus produtos através de programas de coleta seletiva 
+         estabelecidos pela iniciativa privada, cooperativas, escolas, igrejas, organizações não-governamentais 
+         e/ou demais entidades que existam em sua região. O produto fabricado pela Raddec não deve ser descartado 
+         em lixo comum. Fios, cabos, caixas de plástico, porcelana e poste de metal são componentes utilizados para 
+         fabricação de nossos produtos. Todos estes produtos necessitam igualmente de um descarte adequado e seletivo.</div>
+    <!--   <div><td><a href="../Imagens/PP010.pdf">Procedimento de Produção</a></td></div> -->
          <br>
      <div class="container"> 
          <img src=""> 
