--- a/Public/meioambiente.html
+++ b/Public/meioambiente.html
@@ -6,7 +6,7 @@
     <meta name="description"content="Raddec">
     <meta name="keywords" content="HTML, PHP, JavaScript, NodeJS, Laravel, CSS">
     <meta name="author" content="Ewerton Manchini">
-    <title>Raddec Industria - Gestão de Pessoas</title>
+    <title>Raddec Industria - Meio Ambiente</title>
     <style>
         body {
             background: url(../Imagens/FachadaT.png) no-repeat center center fixed ;
@@ -44,30 +44,30 @@
     <p>Distrito Industrial Augusto Bortoli Razia, Rondonópolis - MT</p>
     <p>CEP 78.746-702</p>
      <center><tr>
-         <td height="40"><a href="../index.html">|Pagina Inicial</a></td>
-         <td><a href="../Public/historia.html">|História</a></td>
-         <td><a href="../Public/qualidade.html">|Política de Qualidade</a></td>
+         <td height="40"><a href="../index.html">Pagina Inicial</a></td>
+         <td><a href="../Public/historia.html">|Historico</a></td>
+         <td><a href="../Public/gestao.html">|Gestão de Pessoas</a></td>
          <td><a href="../Public/vendas.html">|Central de Vendas</a></td>
+         <td><a href="../Public/qualidade.html">|Política de Qualidade</a></td>
          <td><a href="../Public/informacoes.html">|Informações ao Cliente</a></td>
-         <td><a href="../Public/meioambiente.html">|Meio Ambiente</a></td>
          <td><a href="../Public/segurancatrabalho.html">|Saúde e Segurança do Trabalho</a></td>
          <td><a href="../Public/fale.html">|Fale Conosco</a></td>
      </tr></center>
      <hr>
      <br>
-     <div class="titulo">Trabalhe Conosco</div>
-     <div>A Indústria Raddec está presente no mercado há mais de 18 anos.</div>
-     <div>Trabalhar na Raddec é fazer parte de um ambiente que trabalha com alegria, 
-         que valoriza as parcerias e que acredita na capacidade e no desenvolvimento de pessoas. 
-         Priorizamos um ambiente familiar, e que estimule o melhor de cada parceiro que sonha com a gente.
-         Venha fazer parte deste time. Envie seu currículo para:
-         <td><a href="mailto:raddec@raddec.com.br">raddec@raddec.com.br</a></td> </div>
+     <div class="titulo">Meio Ambiente</div>
+     <div>Entendemos que o gerenciamento de todo resíduo gerado se torna essencial 
+         para a vida e para o desenvolvimento sustentável. Para tanto foi elaborado 
+         um PGRS (Plano de Gerenciamento de Resíduos Sólidos) para assegurar o melhor 
+         desempenho ambiental da empresa e um processo de melhoria contínua mais assertivo. 
+         Assim, atuamos em toda cadeia de provedores, no processo produtivo, assegurando o 
+         atendimento aos Requisitos Legais e outros aplicáveis às atividades da Indústria. 
+         A Raddec possui o controle da documentação ambiental, e gerencia o uso racional de 
+         recursos energéticos e hídricos. Nossos resíduos sólidos, provenientes do processo produtivo 
+         tem sua finalidade ambiental adequada, sendo destinada à uma cooperativa de reciclagem da região e 
+         realizando desta forma também um papel social junto ao movimento cooperativo da comunidade.</div> 
 
-     <div class="container">
-        <img src="../Imagens/gestao1.jpeg" >
-        <img src="../Imagens/gestao2.jpeg" >
-     </div>
-     
-    
+     <br>
+
 </body>
 </html>
