--- a/Public/qualidade.html
+++ b/Public/qualidade.html
@@ -50,6 +50,8 @@
          <td><a href="../Public/gestao.html">|Gestão de Pessoas</a></td>
          <td><a href="../Public/vendas.html">|Central de Vendas</a></td>
          <td><a href="../Public/informacoes.html">|Informações ao Cliente</a></td>
+         <td><a href="../Public/meioambiente.html">|Meio Ambiente</a></td>
+         <td><a href="../Public/segurancatrabalho.html">|Saúde e Segurança do Trabalho</a></td>
          <td><a href="../Public/fale.html">|Fale Conosco</a></td>
      </tr></center>
      <hr>
