--- a/Public/segurancatrabalho.html
+++ b/Public/segurancatrabalho.html
@@ -6,7 +6,7 @@
     <meta name="description"content="Raddec">
     <meta name="keywords" content="HTML, PHP, JavaScript, NodeJS, Laravel, CSS">
     <meta name="author" content="Ewerton Manchini">
-    <title>Raddec Industria - Gestão de Pessoas</title>
+    <title>Raddec Industria - Saúde e Segurança do Trabalho</title>
     <style>
         body {
             background: url(../Imagens/FachadaT.png) no-repeat center center fixed ;
@@ -44,30 +44,29 @@
     <p>Distrito Industrial Augusto Bortoli Razia, Rondonópolis - MT</p>
     <p>CEP 78.746-702</p>
      <center><tr>
-         <td height="40"><a href="../index.html">|Pagina Inicial</a></td>
-         <td><a href="../Public/historia.html">|História</a></td>
-         <td><a href="../Public/qualidade.html">|Política de Qualidade</a></td>
+         <td height="40"><a href="../index.html">Pagina Inicial</a></td>
+         <td><a href="../Public/historia.html">|Historico</a></td>
+         <td><a href="../Public/gestao.html">|Gestão de Pessoas</a></td>
          <td><a href="../Public/vendas.html">|Central de Vendas</a></td>
+         <td><a href="../Public/qualidade.html">|Política de Qualidade</a></td>
          <td><a href="../Public/informacoes.html">|Informações ao Cliente</a></td>
          <td><a href="../Public/meioambiente.html">|Meio Ambiente</a></td>
-         <td><a href="../Public/segurancatrabalho.html">|Saúde e Segurança do Trabalho</a></td>
          <td><a href="../Public/fale.html">|Fale Conosco</a></td>
      </tr></center>
      <hr>
      <br>
-     <div class="titulo">Trabalhe Conosco</div>
-     <div>A Indústria Raddec está presente no mercado há mais de 18 anos.</div>
-     <div>Trabalhar na Raddec é fazer parte de um ambiente que trabalha com alegria, 
-         que valoriza as parcerias e que acredita na capacidade e no desenvolvimento de pessoas. 
-         Priorizamos um ambiente familiar, e que estimule o melhor de cada parceiro que sonha com a gente.
-         Venha fazer parte deste time. Envie seu currículo para:
-         <td><a href="mailto:raddec@raddec.com.br">raddec@raddec.com.br</a></td> </div>
+     <div class="titulo">Saúde e Segurança do Trabalho</div>
+     <div>Nossa Política da Qualidade assegura que devemos atender aos requisitos de nossos 
+         clientes no fornecimento de produtos confiáveis e de qualidade, que garantam além da 
+         satisfação, a proteção de vidas. Buscar a melhoria contínua por meio de um Sistema de 
+         Gestão da Qualidade efetivo, que englobe parceiros, força de trabalho, fornecedores 
+         de forma comprometida e capacitada.
+        Com base na Política inserida, a RADDEC entende sua força de trabalho como um patrimônio 
+        precioso para o negócio. Estabelecemos através do Código de Ética e Conduta os melhores 
+        critérios de proteção à saúde dos colaboradores, bem como rigoroso monitoramento dos programas 
+        de PPRA, PCMSO e treinamentos.</div> 
 
-     <div class="container">
-        <img src="../Imagens/gestao1.jpeg" >
-        <img src="../Imagens/gestao2.jpeg" >
-     </div>
-     
-    
+     <br>
+
 </body>
 </html>
