--- a/Public/historia.html
+++ b/Public/historia.html
@@ -49,6 +49,8 @@
          <td><a href="../Public/qualidade.html">|Política de Qualidade</a></td>
          <td><a href="../Public/vendas.html">|Central de Vendas</a></td>
          <td><a href="../Public/informacoes.html">|Informações ao Cliente</a></td>
+         <td><a href="../Public/meioambiente.html">|Meio Ambiente</a></td>
+         <td><a href="../Public/segurancatrabalho.html">|Saúde e Segurança do Trabalho</a></td>
          <td><a href="../Public/fale.html">|Fale Conosco</a></td>
      </tr></center>
      <hr>
