--- a/Public/segurancatrabalho.html
+++ b/Public/segurancatrabalho.html
@@ -58,7 +58,7 @@
      <div class="titulo">Saúde e Segurança do Trabalho</div>
      <div>Nossa Política da Qualidade assegura que devemos atender aos requisitos de nossos 
          clientes no fornecimento de produtos confiáveis e de qualidade, que garantam além da 
-         satisfação, a proteção de vidas. Buscar a melhoria contínua por meio de um Sistema de 
+         satisfação, a <span style="color: blue;">proteção de vidas.</span> Buscar a melhoria contínua por meio de um Sistema de 
          Gestão da Qualidade efetivo, que englobe parceiros, força de trabalho, fornecedores 
          de forma comprometida e capacitada.
         Com base na Política inserida, a RADDEC entende sua força de trabalho como um patrimônio 
