--- a/Public/informacoes.html
+++ b/Public/informacoes.html
@@ -67,6 +67,12 @@
          em lixo comum. Fios, cabos, caixas de plástico, porcelana e poste de metal são componentes utilizados para 
          fabricação de nossos produtos. Todos estes produtos necessitam igualmente de um descarte adequado e seletivo.</div>
     <!--   <div><td><a href="../Imagens/PP010.pdf">Procedimento de Produção</a></td></div> -->
+    <br>
+    <div class="titulo">RECALL</div>
+    <div>A Raddec Ind. e Com. Ltda informa que de acordo com as alterações na norma <td><a href="../Imagens/NDU001.pdf">NDU001</a></td>,
+        o prazo para RECALL dos padrões de 3" fora de norma serão aceitos até a data de 31/03/2022. No recall serão realizadas reforma/adequação ao tubo de 4".
+        Os padrões somente serão aceitos e reformados mediante apresentação de nota fiscal de devolução.
+        Para maiores informações entre em contato no telefone: (66)9 9209-2444 (falar com Mônica Moraes)</div>
          <br>
      <div class="container"> 
          <img src=""> 
