--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
          <img src="Imagens/Fachada.jpeg">
          <img src="Imagens/fachada2.jpeg">
      </div>
+     <div>Tiago Albres</div>
+     <div>Engenheiro responsável</div>
+     <div>Engenheiro Mecânico e Segurança do Trabalho</div>
+     <div>CREA/MT-047611</div>
+     
 
 </body>
 </html>
